Update 3. NSW leaflet example.ipynb
Data package downloaded and unzipped on first run

--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -34,6 +34,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### If not already available, the notebook will first download a 40 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the NSW/data directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "import os\n",
+    "from urllib.request import urlopen\n",
+    "from io import BytesIO\n",
+    "\n",
+    "if(not os.path.isdir('../NSW/data')):\n",
+    "    with urlopen('http://geo.loop-gis.org/files/data.zip') as zipresp:\n",
+    "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
+    "            zfile.extractall('../NSW/')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
