--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -52,6 +52,9 @@
     "from io import BytesIO\n",
     "\n",
     "if(not os.path.isdir('../NSW/data')):\n",
+    "    if(not os.path.isdir('../NSW/')):\n",
+    "        os.mkdir('../NSW/')\n",
+    "\n",
     "    with urlopen('http://geo.loop-gis.org/files/data.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
     "            zfile.extractall('../NSW/')"
