Update 3. NSW leaflet example.ipynb
added config file to zip, so change path links

--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### If not already available, the notebook will first download a 40 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the NSW/data directory)"
+    "#### If not already available, the notebook will first download a 40 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the NSW directory)"
    ]
   },
   {
@@ -51,13 +51,11 @@
     "from urllib.request import urlopen\n",
     "from io import BytesIO\n",
     "\n",
-    "if(not os.path.isdir('../NSW/data')):\n",
-    "    if(not os.path.isdir('../NSW/')):\n",
-    "        os.mkdir('../NSW/')\n",
+    "if(not os.path.isdir('../NSW/')):\n",
     "\n",
     "    with urlopen('http://geo.loop-gis.org/files/data.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
-    "            zfile.extractall('../NSW/')"
+    "            zfile.extractall('../')"
    ]
   },
   {
