update QLD and NSW notebooks so data is downloaded as needed
Third time lucky data download

--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,11 @@
     "from urllib.request import urlopen\n",
     "from io import BytesIO\n",
     "\n",
-    "if(not os.path.isdir('../NSW/')):\n",
+    "if(not os.path.isdir('../NSW/data')):\n",
     "\n",
     "    with urlopen('http://geo.loop-gis.org/files/data.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
-    "            zfile.extractall('../')"
+    "            zfile.extractall('../NSW/')"
    ]
   },
   {
