--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -34,6 +34,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### If not already available, the notebook will first download a 40 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the qld_src_data directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "import os\n",
+    "from urllib.request import urlopen\n",
+    "from io import BytesIO\n",
+    "\n",
+    "if(not os.path.isdir('../qld_src_data/data')):\n",
+    "\n",
+    "    with urlopen('http://geo.loop-gis.org/files/qdata.zip') as zipresp:\n",
+    "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
+    "            zfile.extractall('../qld_src_data/')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
