--- a/notebooks/0. Config file generator.ipynb
+++ b/notebooks/0. Config file generator.ipynb
@@ -408,13 +408,20 @@
     "    description='Dip estimate:',\n",
     "    disabled=False\n",
     ")\n",
-    "display(fdipest_choice)\n",
-    "\n",
+    "display(fdipest_choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "printmd('**Text to search for in field defined by fdipest to give fault dip estimate in increasing steepness**')\n",
     "\n",
     "fdipest_vals_choice=widgets.Text(\n",
-    "    placeholder='Shallow, Steep',\n",
-    "    value='Shallow, Steep',\n",
+    "    placeholder='Sorted dip order (shallow to steep)',\n",
+    "    value=str(fault[fdipest_choice.value].unique()).replace(\"[\",\"\").replace(\"]\",\"\").replace(\" \",\",\"),\n",
     "    description='Text Dips:',\n",
     "    disabled=False\n",
     ")\n",
@@ -427,11 +434,7 @@
     "    description='Name:',\n",
     "    disabled=False\n",
     ")\n",
-    "display(n_choice)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "display(n_choice)"
    ]
   },
   {
@@ -452,7 +455,7 @@
     "if(not fold_file==''):\n",
     "    fold=gpd.read_file(fold_file)\n",
     "    display(fold.head())\n",
-    "printmd('**Based on file:'+' '+fault_file+'**')\n",
+    "printmd('**Based on file:'+' '+fold_file+'**')\n",
     "\n",
     "printmd('\\n**Field that contains information on type of structure (fold, fault etc.)**')\n",
     "\n",
@@ -855,6 +858,15 @@
     "f.write(\"\\n\")\n",
     "f.write(\"print('Modify these parameters in the cell below')\\n\")\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_l"
    ]
   },
   {
