--- a/notebooks/0. Generic map processing.ipynb
+++ b/notebooks/0. Generic map processing.ipynb
@@ -28,6 +28,9 @@
    },
    "outputs": [],
    "source": [
+    "import ipywidgets as widgets\n",
+    "import os\n",
+    "\n",
     "test_data_name='Test'\n",
     "print(test_data_name)\n"
    ]
@@ -55,7 +58,7 @@
    "source": [
     "engine_choice=widgets.Dropdown(\n",
     "    options=['geomodeller', 'gempy','loopstructural','noddy','null'],\n",
-    "    value=default_engine,\n",
+    "    value='loopstructural',\n",
     "    description='Modeller:',\n",
     "    disabled=False,\n",
     ")\n",
