Update 1. WA leaflet example.ipynb
Create scratch directory if needed

--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -245,6 +245,8 @@
     "    mbbox=mbbox.to_crs(dst_crs)\n",
     "    print(dst_crs,mbbox.total_bounds)\n",
     "    \n",
+    "    if(not os.path.isdir('../scratch/')):\n",
+    "        os.mkdir('../scratch/')\n",
     "    f=open('../scratch/last_area.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
