Minor notebook tweaks

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -409,7 +409,7 @@
      "end_time": "2020-06-02T06:36:23.738017Z",
      "start_time": "2020-06-02T06:36:11.334988Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1912,7 +1912,11 @@
     "            view.add_data(model.features[model.feature_name_index[sg]])\n",
     "    view.add_model(cmap='tab20')\n",
     "    view.nsteps=np.array([50,50,50])\n",
-    "    view.add_model_surfaces()\n",
+    "\n",
+    "    filename=vtk_path+'surface_name_{}.vtk'\n",
+    "    view.add_model_surfaces(filename=filename)\n",
+    "    \n",
+    "    #view.add_model_surfaces()\n",
     "    view.interactive()  \n",
     "    \n",
     "    for sg in model.feature_name_index:\n",
