--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -2052,7 +2052,7 @@
     "    #model_base=-8200\n",
     "\n",
     "    import random\n",
-    "    \n",
+    "    from datetime import datetime\n",
     "    from LoopStructural import GeologicalModel\n",
     "    import lavavu\n",
     "    from LoopStructural.visualisation import LavaVuModelViewer\n",
@@ -2060,6 +2060,12 @@
     "    import logging\n",
     "    logging.getLogger().setLevel(logging.ERROR)\n",
     "\n",
+    "    nowtime=datetime.now().isoformat(timespec='minutes')   \n",
+    "    model_name='leaflet'+'_'+nowtime.replace(\":\",\"-\").replace(\"T\",\"-\")\n",
+    "    os.mkdir(vtk_path+model_name)\n",
+    "    filename=vtk_path+model_name+'/'+'surface_name_{}.vtk'\n",
+    "\n",
+    "    \n",
     "    f=open(tmp_path+'bbox.csv','w')\n",
     "    f.write('minx,miny,maxx,maxy,lower,upper\\n')\n",
     "    ostr='{},{},{},{},{},{}\\n'.format(minx,miny,maxx,maxy,model_base,model_top)\n",
@@ -2111,6 +2117,7 @@
     "    #view.set_zscale(2)\n",
     "    view.add_model(cmap='tab20')\n",
     "    view.nsteps=np.array([50,50,50])\n",
+    "    #view.add_model_surfaces(filename=filename)\n",
     "    view.add_model_surfaces()\n",
     "    for sg in model.feature_name_index:\n",
     "        if( 'super' in sg):\n",
