--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,13 +2094,19 @@
     "    #model_base=-8200\n",
     "\n",
     "    import random\n",
-    "    \n",
+    "    from datetime import datetime\n",
+    "\n",
     "    from LoopStructural import GeologicalModel\n",
     "    import lavavu\n",
     "    from LoopStructural.visualisation import LavaVuModelViewer\n",
     "    from LoopStructural import GeologicalModel\n",
     "    import logging\n",
     "    logging.getLogger().setLevel(logging.ERROR)\n",
+    "    \n",
+    "    nowtime=datetime.now().isoformat(timespec='minutes')   \n",
+    "    model_name='leaflet'+'_'+nowtime.replace(\":\",\"-\").replace(\"T\",\"-\")\n",
+    "    os.mkdir(vtk_path+model_name)\n",
+    "    filename=vtk_path+model_name+'/'+'surface_name_{}.vtk'\n",
     "\n",
     "    f=open(tmp_path+'bbox.csv','w')\n",
     "    f.write('minx,miny,maxx,maxy,lower,upper\\n')\n",
@@ -2157,6 +2163,7 @@
     "            view.add_data(model.features[model.feature_name_index[sg]])\n",
     "    view.nsteps=np.array([50,50,50])\n",
     "    view.add_model_surfaces()\n",
+    "    #view.add_model_surfaces(filename=filename)\n",
     "    view.interactive()  \n",
     "    \n",
     "    for sg in model.feature_name_index:\n",
