updated notebooks to create scratch directory if needed, and fix asad typo

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -1687,6 +1687,7 @@
    "outputs": [],
    "source": [
     "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow,c_l)\n",
+    "model_top=round(np.amax(dtm.read(1)),-2)\n",
     "dtm.close()\n",
     "if(workflow['cover_map']):\n",
     "    dtb.close()"
@@ -1858,7 +1859,10 @@
     "    from LoopStructural import GeologicalModel\n",
     "    import logging\n",
     "    logging.getLogger().setLevel(logging.ERROR)\n",
-    "\n",
+    "    # ##############################\n",
+    "    # uncomment next line and point to your compiled surfe library if you have one and want to use surfe\n",
+    "    os.environ['SURFE'] = 'C:/Users/00073294/Dropbox/1_Jupyter_notebooks/surfe/Release/'\n",
+    "    # ##############################\n",
     "    f=open(tmp_path+'bbox.csv','w')\n",
     "    f.write('minx,miny,maxx,maxy,lower,upper\\n')\n",
     "    ostr='{},{},{},{},{},{}\\n'.format(minx,miny,maxx,maxy,model_base,model_top)\n",
@@ -1872,7 +1876,7 @@
     "    #                 overprints:overprints,\n",
     "                    'cpw':10,\n",
     "                    'npw':10}\n",
-    "    foliation_params = {'interpolatortype':'PLI' , # 'interpolatortype':'PLI',\n",
+    "    foliation_params = {'interpolatortype':'surfe' , # 'interpolatortype':'PLI','FDI','surfe'\n",
     "                        'nelements':1e5,  # how many tetras/voxels\n",
     "                        'buffer':0.8,  # how much to extend nterpolation around box\n",
     "                        'solver':'pyamg',\n",
