--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,6 +50,8 @@
     "import os\n",
     "\n",
     "# load last saved map area and mdoe engine (if they exist)\n",
+    "if(not os.path.isdir('../scratch/')):\n",
+    "    os.mkdir('../scratch/')\n",
     "if(os.path.isfile('../scratch/last_choices.txt')):\n",
     "    f=open('../scratch/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
@@ -245,8 +254,6 @@
     "    mbbox=mbbox.to_crs(dst_crs)\n",
     "    print(dst_crs,mbbox.total_bounds)\n",
     "    \n",
-    "    if(not os.path.isdir('../scratch/')):\n",
-    "        os.mkdir('../scratch/')\n",
     "    f=open('../scratch/last_area.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
@@ -946,7 +953,7 @@
    "outputs": [],
    "source": [
     "if(Australia):\n",
-    "    asad_strat_file='../source_data/ASAD.csv'\n",
+    "    asad_strat_file='../source_data/ASUD.csv'\n",
     "    m2l_topology.use_asud(strat_graph_file, asad_strat_file,graph_path)\n",
     "    strat_graph_file=graph_path+'ASUD_strat.gml'\n"
    ]
@@ -1881,6 +1888,7 @@
    "outputs": [],
    "source": [
     "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow,c_l)\n",
+    "model_top=round(np.amax(dtm.read(1)),-2)\n",
     "dtm.close()\n",
     "if(workflow['cover_map']):\n",
     "    dtb.close()"
