--- a/notebooks/2. QLD map processing.ipynb
+++ b/notebooks/2. QLD map processing.ipynb
@@ -1713,6 +1713,7 @@
    "outputs": [],
    "source": [
     "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow,c_l)\n",
+    "model_top=round(np.amax(dtm.read(1)),-2)\n",
     "dtm.close()\n",
     "if(workflow['cover_map']):\n",
     "    dtb.close()"
