--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -68,6 +68,8 @@
     "import os\n",
     "\n",
     "# load last saved map area and mdoe engine (if they exist)\n",
+    "if(not os.path.isdir('../scratch/')):\n",
+    "    os.mkdir('../scratch/')\n",
     "if(os.path.isfile('../NSW/last_choices.txt')):\n",
     "    f=open('../NSW/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
@@ -1923,6 +1925,7 @@
    "outputs": [],
    "source": [
     "m2l_geometry.tidy_data(output_path,tmp_path,clut_path,use_gcode3,use_interpolations,use_fat,pluton_form,inputs,workflow,c_l)\n",
+    "model_top=round(np.amax(dtm.read(1)),-2)\n",
     "dtm.close()\n",
     "if(workflow['cover_map']):\n",
     "    dtb.close()"
