notebook tidy up

--- a/notebooks/5. VIC leaflet example.ipynb
+++ b/notebooks/5. VIC leaflet example.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## map2loop: The Northern Territory\n",
+    "## map2loop: Victoria\n",
     "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
-    "   This notebook allows you to select a rectangular sub-area in the Northern Territory, Australia, and using <a href=\"https://nt.gov.au/industry/mining-and-petroleum/geoscience-data-maps/access-geoscience-information/northern-territory-geological-survey-publications-and-maps\" target=\"_blank\">NT</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
+    "   This notebook allows you to select a rectangular sub-area in Victoria, Australia, and using <a href=\"https://earthresources.vic.gov.au/geology-exploration/geological-survey-victoria\" target=\"_blank\">GSV</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
     "\n",
     "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a mdelling engine to make a 3D model.  \n",
     "  \n",
     "\n",
-    "<font color='red'>The leaflet version here dangerously allows you to select your own area from the map, this is just for showing off, as in many parts of NT, the area we focus on here, there isn't enough data in the map alone to make a decent 3D model</font>   \n",
+    "<font color='red'>The leaflet version here dangerously allows you to select your own area from the map, this is just for showing off, as in many parts of Victoria, the area we focus on here, there isn't enough data in the map alone to make a decent 3D model</font>   \n",
     "\n",
     "The outputs from this notebook can be fed into gempy, LoopStructural, Geomodeller and, for the faults, noddy. Having some data doen't mean that you will get a reasonable model for three reasons:\n",
     "   \n",
@@ -51,11 +51,11 @@
     "from urllib.request import urlopen\n",
     "from io import BytesIO\n",
     "\n",
-    "if(not os.path.isdir('../NT/data')):\n",
+    "if(not os.path.isdir('../VIC/data') and False):\n",
     "\n",
     "    with urlopen('http://geo.loop-gis.org/files/NTdata.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
-    "            zfile.extractall('../NT/')"
+    "            zfile.extractall('../VIC/')"
    ]
   },
   {
@@ -70,8 +70,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
-    "if(os.path.isfile('../NT/last_choices.txt')):\n",
-    "    f=open('../NT/last_choices.txt','r')\n",
+    "if(os.path.isfile('../VIC/last_choices.txt')):\n",
+    "    f=open('../VIC/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
     "    f.close()\n",
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
@@ -132,14 +132,14 @@
     "\n",
     "if(not test_data_name =='Draw Your Own'):\n",
     "    if(test_data_name=='Last Area Drawn'):\n",
-    "        last_coords=pd.read_csv('../NT/last_area.csv')\n",
+    "        last_coords=pd.read_csv('../VIC/last_area.csv')\n",
     "        display(last_coords)\n",
     "        minx=last_coords.iloc[0]['minx']\n",
     "        miny=last_coords.iloc[0]['miny']\n",
     "        maxx=last_coords.iloc[0]['maxx']\n",
     "        maxy=last_coords.iloc[0]['maxy']\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-    "    dst_crs = \"epsg:28352\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
+    "    dst_crs = \"epsg:28355\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "\n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "    y_point_list = [miny, miny, maxy, maxy, maxy]\n",
@@ -168,28 +168,28 @@
     "                   name = 'Example')\n",
     "    center=(minlat+((maxlat-minlat)/2),minlong+((maxlong-minlong)/2))\n",
     "else:\n",
-    "    center=(-13.58,131.2)\n",
+    "    center=(-37.1,144.7)\n",
     "    \n",
     "wms_warox = WMSLayer(\n",
-    "    url='http://geo.loop-gis.org/geoserver/loop/wms?',\n",
-    "    layers='loop:pco_structures',\n",
+    "    url='http://geo.loop-gis.org/geoserver/GSV/wms?',\n",
+    "    layers='GSV:struc',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
-    "    attribution='Outcrop data from NTGS',\n",
+    "    attribution='Outcrop data from GSV',\n",
     "    name='outcrops'\n",
     "\n",
     ")\n",
     "wms_geol = WMSLayer(\n",
-    "    url='http://geo.loop-gis.org/geoserver/NTGS/wms?',\n",
-    "    layers='NTGS:pco_lithinterp_500k',\n",
+    "    url='http://geo.loop-gis.org/geoserver/GSV/wms?',\n",
+    "    layers='GSV:geolunit_250k_py',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
     "    opacity=0.4,\n",
-    "    attribution='Geology data from NTGS',\n",
+    "    attribution='Geology data from GSV',\n",
     "    name='geology'\n",
     "\n",
     ")\n",
-    "m =Map(basemap=basemaps.OpenTopoMap, center=center, zoom=11,scroll_wheel_zoom=True)\n",
+    "m =Map(basemap=basemaps.OpenTopoMap, center=center, zoom=9,scroll_wheel_zoom=True)\n",
     "label = Label()\n",
     "display(label)\n",
     "\n",
@@ -261,7 +261,7 @@
     "        \n",
     "    bounds=(minlong,maxlong,minlat,maxlat)\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-    "    dst_crs = \"epsg:28352\" # coordinate system for example data\n",
+    "    dst_crs = \"epsg:28355\" # coordinate system for example data\n",
     "\n",
     "\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
@@ -272,7 +272,7 @@
     "    mbbox=mbbox.to_crs(dst_crs)\n",
     "    print(dst_crs,mbbox.total_bounds)\n",
     "    \n",
-    "    f=open('../NT/last_area.csv','w') \n",
+    "    f=open('../VIC/last_area.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
     "    ostr=str(minlong)+','+str(minlat)+','+str(maxlong)+','+str(maxlat)+'\\n'\n",
@@ -321,7 +321,7 @@
     "workflow={'model_engine':engine_choice.value} \n",
     "print(workflow['model_engine'])\n",
     "# save last map and engine choices\n",
-    "f=open('../NT/last_choices.txt','w') \n",
+    "f=open('../VIC/last_choices.txt','w') \n",
     "ostr=str(map_choice.value)+'\\n'+str(engine_choice.value)+'\\n'\n",
     "f.write(ostr)\n",
     "f.close()"
@@ -391,7 +391,7 @@
    "outputs": [],
    "source": [
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn' ):\n",
-    "    test_data_path='../NT/'\n",
+    "    test_data_path='../VIC/'\n",
     "    minx=mbbox.total_bounds[0]\n",
     "    maxx=mbbox.total_bounds[2]\n",
     "    miny=mbbox.total_bounds[1]\n",
@@ -399,7 +399,7 @@
     "    \n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "\n",
-    "    os.chdir('../NT/')\n",
+    "    os.chdir('../VIC/')\n",
     "    #%run -i \"m2l_config.py\"\n",
     "    %run -i \"m2l_config_remote.py\"\n",
     "    print(os.getcwd())\n",
@@ -645,7 +645,7 @@
      "end_time": "2020-06-02T06:36:23.738017Z",
      "start_time": "2020-06-02T06:36:11.334988Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1842,7 +1842,7 @@
    "source": [
     "if(workflow['contact_dips']):\n",
     "    orientations=pd.read_csv(output_path+'orientations.csv',\",\")\n",
-    "    contact_dip=70\n",
+    "    contact_dip=-999\n",
     "    contact_orientation_decimate=5\n",
     "    m2l_geometry.save_basal_contacts_orientations_csv(contacts,orientations,geol_clip,tmp_path,output_path,dtm,dtb,\n",
     "                            dtb_null,workflow['cover_map'],contact_orientation_decimate,c_l,contact_dip,dip_grid,spacing,bbox)"
@@ -1919,7 +1919,7 @@
     "\n",
     "        #Save fold axial trace near-hinge orientations\n",
     "        fat_step=750         # how much to step out normal to fold axial trace\n",
-    "        close_dip=70       #dip to assign to all new orientations (-999= use local interpolated dip)\n",
+    "        close_dip=-999       #dip to assign to all new orientations (-999= use local interpolated dip)\n",
     "\n",
     "        m2l_geometry.save_fold_axial_traces_orientations(fold_file,output_path,tmp_path,dtm,dtb,dtb_null,workflow['cover_map'],c_l,dst_crs,\n",
     "                                                         fold_decimate,fat_step,close_dip,scheme,bbox,spacing,dip_grid,dip_dir_grid)\n"
@@ -2044,7 +2044,7 @@
     "scrolled": false
    },
    "source": [
-    "# loop2geomodeller test \n",
+    "# loop2gemodeller test \n",
     "\n"
    ]
   },
@@ -2121,19 +2121,13 @@
     "\n",
     "    import random\n",
     "    from datetime import datetime\n",
-    "    os.environ['SURFE'] = 'C:/Users/00073294/Dropbox/1_Jupyter_notebooks/surfe/Release/'\n",
+    "\n",
     "    from LoopStructural import GeologicalModel\n",
-    "    import surfepy\n",
-    "    #from LoopStructural import GeologicalModel\n",
     "    import lavavu\n",
     "    from LoopStructural.visualisation import LavaVuModelViewer\n",
     "    from LoopStructural import GeologicalModel\n",
     "    import logging\n",
     "    logging.getLogger().setLevel(logging.ERROR)\n",
-    "    import sys\n",
-    "    #sys.path.append('C:/Users/00073294/Dropbox/1_Jupyter_notebooks/surfe/Release/')\n",
-    "    #os.environ['SURFE'] = 'C:/Users/00073294/Dropbox/1_Jupyter_notebooks/surfe/Release/'\n",
-    "    #import surfepy\n",
     "    \n",
     "    nowtime=datetime.now().isoformat(timespec='minutes')   \n",
     "    model_name='leaflet'+'_'+nowtime.replace(\":\",\"-\").replace(\"T\",\"-\")\n",
@@ -2153,12 +2147,11 @@
     "    #                 overprints:overprints,\n",
     "                    'cpw':10,\n",
     "                    'npw':10}\n",
-    "    foliation_params = {'interpolatortype':'PLI' , # 'interpolatortype':'PLI', 'FDI', 'surfe'\n",
+    "    foliation_params = {'interpolatortype':'PLI' , # 'interpolatortype':'PLI', 'FDI'\n",
     "                        'nelements':5e5,  # how many tetras/voxels\n",
-    "                        'buffer':0.8,  # how much to extend interpolation around box\n",
+    "                        'buffer':0.8,  # how much to extend nterpolation around box\n",
     "                        'solver':'pyamg',\n",
-    "                        'damp':True,\n",
-    "                        'cpw':5}\n",
+    "                        'damp':True}\n",
     "    \n",
     "    if(not os.path.exists(fault_file)):\n",
     "        f=open(output_path + '/fault_displacements3.csv','w')\n",
@@ -2187,7 +2180,7 @@
     "                                                              fault_params=fault_params,\n",
     "                                                              foliation_params=foliation_params)\n",
     "  \n",
-    "    view = LavaVuModelViewer(model,vertical_exaggeration=1) \n",
+    "    view = LavaVuModelViewer(model,vertical_exaggeration=2) \n",
     "    view.nsteps = np.array([200,200,200])\n",
     "    #view.set_zscale(2)\n",
     "    view.add_model(cmap='tab20')\n",
@@ -2217,9 +2210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if(workflow['model_engine']=='loopstructural'):  \n",
