--- a/notebooks/7. TAS leaflet example.ipynb
+++ b/notebooks/7. TAS leaflet example.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## map2loop: The Northern Territory\n",
+    "## map2loop: Tasmania\n",
     "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
-    "   This notebook allows you to select a rectangular sub-area in the Northern Territory, Australia, and using <a href=\"https://nt.gov.au/industry/mining-and-petroleum/geoscience-data-maps/access-geoscience-information/northern-territory-geological-survey-publications-and-maps\" target=\"_blank\">NT</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
+    "   This notebook allows you to select a rectangular sub-area in South Australia, Australia, and using <a href=\"https://www.mrt.tas.gov.au/home\" target=\"_blank\">MRT</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
     "\n",
     "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a mdelling engine to make a 3D model.  \n",
     "  \n",
     "\n",
-    "<font color='red'>The leaflet version here dangerously allows you to select your own area from the map, this is just for showing off, as in many parts of NT, the area we focus on here, there isn't enough data in the map alone to make a decent 3D model</font>   \n",
+    "<font color='red'>The leaflet version here dangerously allows you to select your own area from the map, this is just for showing off, as in many parts of Tasmania, the area we focus on here, there isn't enough data in the map alone to make a decent 3D model</font>   \n",
     "\n",
     "The outputs from this notebook can be fed into gempy, LoopStructural, Geomodeller and, for the faults, noddy. Having some data doen't mean that you will get a reasonable model for three reasons:\n",
     "   \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,18 +51,33 @@
     "from urllib.request import urlopen\n",
     "from io import BytesIO\n",
     "\n",
-    "if(not os.path.isdir('../NT/data')):\n",
+    "if(not os.path.isdir('../TAS/data')):\n",
     "\n",
-    "    with urlopen('http://geo.loop-gis.org/files/NTdata.zip') as zipresp:\n",
+    "    with urlopen('http://geo.loop-gis.org/files/TASdata.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
-    "            zfile.extractall('../NT/')"
+    "            zfile.extractall('../TAS/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3c0535bd3904a2982c1754d09e42ee2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Map area:', options=('Draw Your Own', 'Last Area Drawn'), value='Draw Your Own')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "import os\n",
@@ -70,8 +85,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
-    "if(os.path.isfile('../NT/last_choices.txt')):\n",
-    "    f=open('../NT/last_choices.txt','r')\n",
+    "if(os.path.isfile('../TAS/last_choices.txt')):\n",
+    "    f=open('../TAS/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
     "    f.close()\n",
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
@@ -96,9 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Draw Your Own\n"
+     ]
+    }
+   ],
    "source": [
     "test_data_name=map_choice.value\n",
     "print(test_data_name)\n",
@@ -112,11 +135,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d687d4347c64ab2b3a9b53b66fa7831",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a601440dfd5b4c9bb1e7b431225f652f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[-41.3, 147.2], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_o…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
@@ -132,7 +184,7 @@
     "\n",
     "if(not test_data_name =='Draw Your Own'):\n",
     "    if(test_data_name=='Last Area Drawn'):\n",
-    "        last_coords=pd.read_csv('../NT/last_area.csv')\n",
+    "        last_coords=pd.read_csv('../TAS/last_area.csv')\n",
     "        display(last_coords)\n",
     "        minx=last_coords.iloc[0]['minx']\n",
     "        miny=last_coords.iloc[0]['miny']\n",
@@ -168,28 +220,28 @@
     "                   name = 'Example')\n",
     "    center=(minlat+((maxlat-minlat)/2),minlong+((maxlong-minlong)/2))\n",
     "else:\n",
-    "    center=(-13.58,131.2)\n",
+    "    center=(-41.3,147.2)\n",
     "    \n",
     "wms_warox = WMSLayer(\n",
-    "    url='http://geo.loop-gis.org/geoserver/loop/wms?',\n",
-    "    layers='loop:pco_structures',\n",
+    "    url='http://geo.loop-gis.org/geoserver/MRT/wms?',\n",
+    "    layers='MRT:geol_struc_250',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
-    "    attribution='Outcrop data from NTGS',\n",
-    "    name='outcrops'\n",
+    "    attribution='Fault data from GSSA',\n",
+    "    name='faults'\n",
     "\n",
     ")\n",
     "wms_geol = WMSLayer(\n",
-    "    url='http://geo.loop-gis.org/geoserver/NTGS/wms?',\n",
-    "    layers='NTGS:pco_lithinterp_500k',\n",
+    "    url='http://geo.loop-gis.org/geoserver/MRT/wms?',\n",
+    "    layers='MRT:geol_poly_250',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
     "    opacity=0.4,\n",
-    "    attribution='Geology data from NTGS',\n",
+    "    attribution='Geology data from GSSA',\n",
     "    name='geology'\n",
     "\n",
     ")\n",
-    "m =Map(basemap=basemaps.OpenTopoMap, center=center, zoom=11,scroll_wheel_zoom=True)\n",
+    "m =Map(basemap=basemaps.OpenTopoMap, center=center, zoom=9,scroll_wheel_zoom=True)\n",
     "label = Label()\n",
     "display(label)\n",
     "\n",
@@ -272,7 +324,7 @@
     "    mbbox=mbbox.to_crs(dst_crs)\n",
     "    print(dst_crs,mbbox.total_bounds)\n",
     "    \n",
-    "    f=open('../NT/last_area.csv','w') \n",
+    "    f=open('../TAS/last_area.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
     "    ostr=str(minlong)+','+str(minlat)+','+str(maxlong)+','+str(maxlat)+'\\n'\n",
@@ -321,7 +373,7 @@
     "workflow={'model_engine':engine_choice.value} \n",
     "print(workflow['model_engine'])\n",
     "# save last map and engine choices\n",
-    "f=open('../NT/last_choices.txt','w') \n",
+    "f=open('../TAS/last_choices.txt','w') \n",
     "ostr=str(map_choice.value)+'\\n'+str(engine_choice.value)+'\\n'\n",
     "f.write(ostr)\n",
     "f.close()"
@@ -391,7 +443,7 @@
    "outputs": [],
    "source": [
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn' ):\n",
-    "    test_data_path='../NT/'\n",
+    "    test_data_path='../TAS/'\n",
     "    minx=mbbox.total_bounds[0]\n",
     "    maxx=mbbox.total_bounds[2]\n",
     "    miny=mbbox.total_bounds[1]\n",
@@ -399,7 +451,7 @@
     "    \n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "\n",
-    "    os.chdir('../NT/')\n",
+    "    os.chdir('../TAS/')\n",
     "    #%run -i \"m2l_config.py\"\n",
     "    %run -i \"m2l_config_remote.py\"\n",
     "    print(os.getcwd())\n",
@@ -645,7 +697,7 @@
      "end_time": "2020-06-02T06:36:23.738017Z",
      "start_time": "2020-06-02T06:36:11.334988Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
