3 notebooks w/o data have big warning at top

--- a/notebooks/5. VIC leaflet example.ipynb
+++ b/notebooks/5. VIC leaflet example.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "## map2loop: Victoria\n",
     "\n",
+    "# NOT CONNECTED TO DATASETS (YET)...\n",
+    "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
     "   This notebook allows you to select a rectangular sub-area in Victoria, Australia, and using <a href=\"https://earthresources.vic.gov.au/geology-exploration/geological-survey-victoria\" target=\"_blank\">GSV</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
