--- a/notebooks/6. SA leaflet example.ipynb
+++ b/notebooks/6. SA leaflet example.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "## map2loop: South Australia\n",
+    "# NOT CONNECTED TO DATASETS (YET)...\n",
     "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
