--- a/notebooks/7. TAS leaflet example.ipynb
+++ b/notebooks/7. TAS leaflet example.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "## map2loop: Tasmania\n",
     "\n",
+    "# NOT CONNECTED TO DATASETS (YET)...\n",
+    "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
     "   This notebook allows you to select a rectangular sub-area in South Australia, Australia, and using <a href=\"https://www.mrt.tas.gov.au/home\" target=\"_blank\">MRT</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
