Update 1. Hamersley map processing.ipynb
change default interpolator to PLI for foliations

--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -1876,7 +1876,7 @@
     "    #                 overprints:overprints,\n",
     "                    'cpw':10,\n",
     "                    'npw':10}\n",
-    "    foliation_params = {'interpolatortype':'surfe' , # 'interpolatortype':'PLI','FDI','surfe'\n",
+    "    foliation_params = {'interpolatortype':'PLI' , # 'interpolatortype':'PLI','FDI','surfe'\n",
     "                        'nelements':1e5,  # how many tetras/voxels\n",
     "                        'buffer':0.8,  # how much to extend nterpolation around box\n",
     "                        'solver':'pyamg',\n",
